stream-practice fixed  implementation again according to comments.